Declared boolean status flags that are checked in run loops as Volatile to  ensure they are not cached.  App seemed to shut down properly after this change. (these flags are set in one thread and read in another, so Volatile is appropriate).
Moved Roster data and Metadata downloads from Throttle to TA.  These are run from worker threads when required.  A ROSTER_UPDATE message is now sent to the activities whenever new data has arrived.  Moving this work to TA allows the worker threads to run if user navigates off of Throttle.  In particular, if the user navigates to SelectLoco the screen will update as soon as new data has been downloaded.

Minor fixes and improvements in function_settings.